feat: add configurable arguments for read simulators in params.config

--- a/conf/params.config
+++ b/conf/params.config
@@ -55,5 +55,9 @@ params {
     paired = null
     unpaired = null
 
+    // Read simulator params (default settings provided)
+    badread_args = "--length 15000,13000 --identity 95,99,2.5 --error_model nanopore2023 --qscore_model nanopore2023 --junk_reads 1 --random_reads 1 --chimeras 1 --glitches 10000,25,25"
+    wgsim_args = "-1 150 -2 150 -r 0.001 -R 0.15"
+    
 
 }
